# bytesize

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  meson.build
include/: bytesize.h  cli.h
meson-subprojects/: unity
src/: CMakeLists.txt  bytesize.c  cli.c  main.c  meson.build
subprojects/: CMakeLists.txt  log.c  meson.build
test/: CMakeLists.txt  test_bytesize.c
